--- a/assets/css/stats.css
+++ b/assets/css/stats.css
@@ -17,7 +17,6 @@
 	box-sizing: border-box;
 	width: 90%;
 	height: 60%;
-	padding: 10px;
 	background: #e6e6e6;
 	border: 4px solid #c7c7c7;
 	border-radius: 3px;
@@ -34,8 +33,12 @@
 	justify-content: space-between;
 	align-items: center;
 	flex-grow: 1;
+	transition: .1s ease;
+	padding: 0 10px;
 }
-
+#stats-container .stat:hover {
+	background: #00000050;
+}
 #stats-container .stat .stat-title {
 	font: 14pt 'Stats';	
 }
