--- a/assets/css/stats.css
+++ b/assets/css/stats.css
@@ -45,5 +45,14 @@
 
 #stats-container .stat .stat-value {
 	font: 32pt 'Score';
+}
 
+#stats-exit-btn {
+	position: fixed;
+	top: 10px;
+	left: 10px;
+	width: 50px;
+	height: 50px;
+	background: url(../img/leave.png) center center / contain no-repeat;
+	cursor: pointer;
 }
