--- a/assets/css/Coin.css
+++ b/assets/css/Coin.css
@@ -2,7 +2,12 @@
 	filter: drop-shadow(0px 5px 5px #fff);
 }
 
-.Coin.fadeOut {
-	transition: .3s;
+.Coin.taken {
+	transition: .1s ease;
 	opacity: 0;
+}
+
+.Coin.game-end-remove {
+	transition: 1.5s ease-in;
+	transform: translateY(1500px) rotate(360deg);
 }
