--- a/assets/css/stats.css
+++ b/assets/css/stats.css
@@ -14,40 +14,40 @@
 }
 
 #stats-container {
+	flex-direction: column;
+	align-content: space-around;
+	display: flex;
+	opacity: 0.8;
+	margin: 0 auto;
+	border: 4px solid #c7c7c7;
+	border-radius: 3px;
 	box-sizing: border-box;
 	width: 90%;
 	height: 60%;
 	background: #e6e6e6;
-	border: 4px solid #c7c7c7;
-	border-radius: 3px;
-	opacity: .8;
-	margin: 0 auto;
-	display: flex;
-	flex-direction: column;
-	align-content: space-around;
 }
 
 #stats-container .stat {
 	position: relative;
-	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	flex-grow: 1;
-	transition: .1s ease;
+	display: flex;
+	transition: 0.1s ease;
 	padding: 0 10px;
 }
 #stats-container .stat:hover {
 	background: #00000050;
 }
 #stats-container .stat .stat-title {
-	font: 14pt 'Stats';	
+	font: 14pt 'Stats';
 }
 
 #stats-container .stat .stat-value {
 	font: 32pt 'Score';
 }
 
-#stats-exit-btn {
+.exit-btn {
 	position: fixed;
 	top: 10px;
 	left: 10px;
