--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -30,8 +30,9 @@
 	background: url(../img/volume-on.png) center center / contain no-repeat;
 	cursor: pointer;
 }
+
 .game-section#main-menu #menu-audio.muted {
-	background-image: url(../img/volume-off.png)
+	background-image: url(../img/volume-off.png);
 }
 
 .game-section#main-menu #menu-title {
@@ -42,7 +43,7 @@
 }
 
 .menu-item {
-	transition: transform .3s ease;
+	transition: transform 0.3s ease;
 	margin: 30px 0;
 	border: 4px solid #777;
 	border-radius: 10px;
