--- a/assets/css/inventory.css
+++ b/assets/css/inventory.css
@@ -1,3 +1,4 @@
+/* Paul Leflon - Aryelle Pocholle - Chloé Xu - Lévina Sun */
 .game-section#inventory {
 	overflow: hidden;
 	background: url(../img/sprites/default/background.png) center center / cover;
