--- a/assets/css/Player.css
+++ b/assets/css/Player.css
@@ -1,3 +1,4 @@
+/* Paul Leflon - Aryelle Pocholle - Chloé Xu - Lévina Sun */
 .Player {
 	z-index: 3;
 	transition: filter 0.2s ease, transform 0.2s ease;
