--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -1,3 +1,4 @@
+/* Paul Leflon - Aryelle Pocholle - Chloé Xu - Lévina Sun */
 .game-section#main-menu.displayed {
 	justify-content: center;
 	align-items: center;
